--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
 
                         <tr class="tabla__tr">
                             <td class="tabla__td">Sábado</td>
-                            <td class="tabla__td">09:00</td>
-                            <td class="tabla__td">19:00</td>
+                            <td class="tabla__td">10:00</td>
+                            <td class="tabla__td">14:00</td>
                         </tr> <!--.tr-->
 
                         <tr class="tabla__tr">
@@ -241,7 +241,54 @@
         </div>
     </main>
 
-    
+    <section class="cita">
+        <h2 class="cita__heading">Realiza una cita</h2>
+        <p class="cita__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo dicta commodi corporis, rem architecto rerum nostrum. Voluptate, repudiandae laboriosam libero doloremque nesciunt error neque dignissimos aspernatur nulla, maiores eveniet nobis!</p>
+        <a href="#" class="cita__enlace">Leer más</a>
+    </section>
+
+    <footer class="footer">
+        <div class="contenedor footer__grid">
+            <div class="footer__widget">
+                <h3 class="footer__heading">Nosotros</h3>
+                <p class="footer__texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione ut ad et eaque commodi ipsum voluptatem aliquam sed? Optio illo est sequi officia, non distinctio.</p>
+            </div> <!--.footer__widget-->
+
+            <div class="footer__widget">
+                <h3 class="footer__heading">Horario</h3>
+                <p class="footer__texto">Lun-Vie: 9AM - 7PM</p>
+                <p class="footer__texto">Sábado: 10AM - 2PM</p>
+                <p class="footer__texto">Domingo: Cerrado</p>
+            </div> <!--.footer__widget-->
+
+            <div class="footer__widget">
+                <h3 class="footer__heading">Contacto</h3>
+                <p class="footer__texto">Av. Ruiz Cortines 2224</p>
+                <nav class="sociales">
+                    <a href="https://facebook.com" class="sociales__enlace">
+                        <span class="sociales__accesible">Facebook</span>
+                    </a>
+                    <a href="https://twitter.com" class="sociales__enlace">
+                        <span class="sociales__accesible">X</span>
+                    </a>
+                    <a href="https://instagram.com" class="sociales__enlace">
+                        <span class="sociales__accesible">Instagram</span>
+                    </a>
+                    <a href="https://pinterest.com" class="sociales__enlace">
+                        <span class="sociales__accesible">Pinterest</span>
+                    </a>
+                    <a href="https://youtube.com" class="sociales__enlace">
+                        <span class="sociales__accesible">YouTube</span>
+                    </a>
+                    <a href="https://tiktok.com" class="sociales__enlace">
+                        <span class="sociales__accesible">TikTok</span>
+                    </a>
+                </nav>                
+            </div> <!--.footer__widget-->
+        </div>
+
+        <p class="footer__copyright">&copy; 2024 Carolina Spa & Salón. Todos los derechos reservados.</p>
+    </footer>
 
 </body>
 </html>
