Archivos modificados - footer

--- a/index.html
+++ b/index.html
@@ -264,29 +264,26 @@
             <div class="footer__widget">
                 <h3 class="footer__heading">Contacto</h3>
                 <p class="footer__texto">Av. Ruiz Cortines 2224</p>
-                <p class="footer__texto">contacto@carolinaspasalon.com</p>
-                <div class="footer__sociales">
-                    <nav class="sociales">
-                        <a href="https://facebook.com" class="sociales__enlace">
-                            <span class="sociales__accesible">Facebook</span>
-                        </a>
-                        <a href="https://twitter.com" class="sociales__enlace">
-                            <span class="sociales__accesible">X</span>
-                        </a>
-                        <a href="https://instagram.com" class="sociales__enlace">
-                            <span class="sociales__accesible">Instagram</span>
-                        </a>
-                        <a href="https://pinterest.com" class="sociales__enlace">
-                            <span class="sociales__accesible">Pinterest</span>
-                        </a>
-                        <a href="https://youtube.com" class="sociales__enlace">
-                            <span class="sociales__accesible">YouTube</span>
-                        </a>
-                        <a href="https://tiktok.com" class="sociales__enlace">
-                            <span class="sociales__accesible">TikTok</span>
-                        </a>
-                    </nav>                
-                </div>
+                <nav class="sociales footer__sociales">
+                    <a href="https://facebook.com" class="sociales__enlace">
+                        <span class="sociales__accesible">Facebook</span>
+                    </a>
+                    <a href="https://twitter.com" class="sociales__enlace">
+                        <span class="sociales__accesible">X</span>
+                    </a>
+                    <a href="https://instagram.com" class="sociales__enlace">
+                        <span class="sociales__accesible">Instagram</span>
+                    </a>
+                    <a href="https://pinterest.com" class="sociales__enlace">
+                        <span class="sociales__accesible">Pinterest</span>
+                    </a>
+                    <a href="https://youtube.com" class="sociales__enlace">
+                        <span class="sociales__accesible">YouTube</span>
+                    </a>
+                    <a href="https://tiktok.com" class="sociales__enlace">
+                        <span class="sociales__accesible">TikTok</span>
+                    </a>
+                </nav>                
             </div> <!--.footer__widget-->
         </div>
 
